CORE-6962 remove base from build. use java 11 map of